--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,14 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+joblib = "^1.3.2"
+fastapi = "^0.108.0"
+uvicorn = "^0.25.0"
+ray = {extras = ["serve"], version = "^2.9.0"}
+pandas = "^2.1.4"
+xgboost = "^2.0.3"
+jupyter = "^1.0.0"
+mlflow = "^2.9.2"
 
 
 [tool.poetry.group.dev.dependencies]
