--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ mlflow = "^2.9.2"
 shap = "^0.44.1"
 lime = "^0.2.0.1"
 imblearn = "^0.0"
+lightgbm = "^4.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
