--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,16 +10,14 @@ python = "^3.11"
 joblib = "^1.3.2"
 fastapi = "^0.108.0"
 uvicorn = "^0.25.0"
-ray = {extras = ["serve"], version = "^2.9.0"}
 pandas = "^2.1.4"
 xgboost = "^2.0.3"
-jupyter = "^1.0.0"
 mlflow = "^2.9.2"
 shap = "^0.44.1"
-lime = "^0.2.0.1"
 imblearn = "^0.0"
 lightgbm = "^4.3.0"
 python-dotenv = "^1.0.1"
+gunicorn = "^21.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -29,6 +27,7 @@ flake8-docstrings = "^1.6.0"
 flake8-bugbear = "^22.9.23"
 isort = "^5.10.1"
 pylint = "^2.15.5"
+jupyter = "^1.0.0"
 
 [tool.isort]
 profile = "black"
