--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ shap = "^0.44.1"
 lightgbm = "^4.3.0"
 python-dotenv = "^1.0.1"
 gunicorn = "^21.2.0"
+dagshub = "^0.3.20"
 
 
 [tool.poetry.group.dev.dependencies]
