--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ shap = "^0.44.1"
 lightgbm = "^4.3.0"
 python-dotenv = "^1.0.1"
 gunicorn = "^21.2.0"
-dagshub = "^0.3.20"
+mlflow = "^2.11.3"
 
 
 [tool.poetry.group.dev.dependencies]
