--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ lightgbm = "^4.3.0"
 python-dotenv = "^1.0.1"
 gunicorn = "^21.2.0"
 mlflow = "^2.11.3"
+pytest = "^8.1.1"
+psycopg2 = "^2.9.9"
 
 
 [tool.poetry.group.dev.dependencies]
