--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Install Python
-        uses: actions/setup-python@v4
-        # see details (matrix, python-version, python-version-file, etc.)
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
         # https://github.com/actions/setup-python
       - name: Install poetry
         uses: abatilo/actions-poetry@v2
