Modified app.py for coherence with test_app.py and use of pytest and hypothesis libraries. Implemented class for model elements.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ gunicorn = "^21.2.0"
 mlflow = "^2.11.3"
 pytest = "^8.1.1"
 psycopg2 = "^2.9.9"
+hypothesis = "^6.100.0"
 
 
 [tool.poetry.group.dev.dependencies]
