--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,15 @@ on:
 jobs:
   ci:
     runs-on: ubuntu-latest
+    env:
+      MLFLOW_TRACKING_URI: ${{secrets.MLFLOW_TRACKING_URI}}
+      MLFLOW_TRACKING_USERNAME: ${{secrets.MLFLOW_TRACKING_USERNAME}}
+      MLFLOW_TRACKING_PASSWORD: ${{secrets.MLFLOW_TRACKING_PASSWORD}}
+      MLFLOW_RUN_ID: ${{secrets.MLFLOW_RUN_ID}}
+      MLFLOW_MODEL_URI: ${{secrets.MLFLOW_MODEL_URI}}
+      ARTIFACT_PATH: ${{secrets.ARTIFACT_PATH}}
+      BEST_MODEL_NAME: ${{secrets.BEST_MODEL_NAME}}
+      BEST_MODEL_VERSION: ${{secrets.BEST_MODEL_VERSION}}
     steps:
       - uses: actions/checkout@v4
       - name: Install Python
